--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: mileschou/composer-action@master
         with:
-          args: --help
+          args: show -lo
