--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,5 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: mileschou/composer-action@master
-      - run: composer show -lo
+      - run: composer install && composer show -lo
