--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,4 +10,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: composer install && composer show -lo
+      - run: composer install
+      - run: composer show -lo
