--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: composer install
-      - run: composer show -lo
+      - run: composer show -lo --strict
